--- a/USFParkingApp/Views/Visualizations/Index.cshtml
+++ b/USFParkingApp/Views/Visualizations/Index.cshtml
@@ -2,41 +2,76 @@
     ViewData["Title"] = "Data Visualizations";
 }
 
-<h2 class="mb-5 text-center">Parking Data Visualizations</h2>
+<div class="container">
+  <h2 class="mb-5 text-center">Parking Data Visualizations</h2>
 
-<div class="row text-center align-items-start">
+  <div class="row gy-4 text-center align-items-start">
     <!-- Bar Chart -->
-    <div class="col-md-4 mb-5">
-        <h4>Capacity vs. Availability</h4>
-        <div class="d-flex justify-content-center">
-            <canvas id="barChart" width="300" height="300" style="max-width: 300px; max-height: 300px;"></canvas>
-        </div>
-        <div class="mt-3 d-flex justify-content-center">
-            <button class="btn btn-outline-primary" onclick="location.href='/Visualizations/BarDetails'">Details</button>
-        </div>
+    <div class="col-lg-4 col-md-6">
+      <h4>Capacity vs. Availability</h4>
+      <div class="d-flex justify-content-center">
+        <canvas
+          id="barChart"
+          width="300" height="300"
+          style="max-width: 300px; max-height: 300px;"
+        ></canvas>
+      </div>
+      <div class="mt-3 d-flex justify-content-center">
+        <button
+          class="btn btn-outline-primary"
+          onclick="location.href='/Visualizations/BarDetails'"
+        >Details</button>
+      </div>
     </div>
 
     <!-- Pie Chart -->
-    <div class="col-md-4 mb-5">
-        <h4>Usage by Type</h4>
-        <div class="d-flex justify-content-center">
-            <canvas id="pieChart" width="300" height="300" style="max-width: 300px; max-height: 300px;"></canvas>
-        </div>
-        <div class="mt-3 d-flex justify-content-center">
-            <button class="btn btn-outline-primary" onclick="location.href='/Visualizations/PieDetails'">Details</button>
-        </div>
+    <div class="col-lg-4 col-md-6">
+      <h4>Usage by Type</h4>
+      <div class="d-flex justify-content-center">
+        <canvas
+          id="pieChart"
+          width="300" height="300"
+          style="max-width: 300px; max-height: 300px;"
+        ></canvas>
+      </div>
+      <div class="mt-3 d-flex justify-content-center">
+        <button
+          class="btn btn-outline-primary"
+          onclick="location.href='/Visualizations/PieDetails'"
+        >Details</button>
+      </div>
     </div>
 
     <!-- Line Chart -->
-    <div class="col-md-4 mb-5">
-        <h4>Availability Trend</h4>
-        <div class="d-flex justify-content-center">
-            <canvas id="lineChart" width="300" height="300" style="max-width: 300px; max-height: 300px;"></canvas>
-        </div>
-        <div class="mt-3 d-flex justify-content-center">
-            <button class="btn btn-outline-primary" onclick="location.href='/Visualizations/LineDetails'">Details</button>
-        </div>
+    <div class="col-lg-4 col-md-6">
+      <h4>Availability Trend</h4>
+      <div class="d-flex justify-content-center">
+        <canvas
+          id="lineChart"
+          width="300" height="300"
+          style="max-width: 300px; max-height: 300px;"
+        ></canvas>
+      </div>
+      <div class="mt-3 d-flex justify-content-center">
+        <button
+          class="btn btn-outline-primary"
+          onclick="location.href='/Visualizations/LineDetails'"
+        >Details</button>
+      </div>
     </div>
+  </div>
+
+  <!-- CRUD Buttons Row -->
+  <div class="row mt-5">
+    <div class="col text-center">
+      <div class="d-flex justify-content-center gap-2 flex-wrap">
+        <a class="btn btn-success" href="/Home/Create">Create</a>
+        <a class="btn btn-warning" href="/Home/Update">Update</a>
+        <a class="btn btn-danger"  href="/Home/Delete">Delete</a>
+        <button class="btn btn-info" onclick="location.reload()">Read</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 @section Scripts {
