--- a/USFParkingApp/Views/Home/About.cshtml
+++ b/USFParkingApp/Views/Home/About.cshtml
@@ -126,7 +126,7 @@
 
     <!-- Repository Link -->
     <div class="mt-5">
-      <a href="https://github.com/chandarr7/usfpark" target="_blank" class="btn btn-lg btn-outline-usf-green shadow-sm">
+      <a href="https://github.com/JenGBNegron/Final_Project_Application_Development.git" target="_blank" class="btn btn-lg btn-outline-usf-green shadow-sm">
         <i class="bi bi-github me-2"></i>View Source on GitHub
       </a>
     </div>
